--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,11 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title>Baby Tracker - (Home)</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+  <h2>Welcome to Baby Tracker!</h2>
+  <p>This app was created with new parents in mind!</p>
+  <p>We've designed this from the ground up to help parents take care of their newborns. Offering easy health, feeding, and digestion tracking.</p>
 </ion-content>
