--- a/src/pages/dateview/dateview.html
+++ b/src/pages/dateview/dateview.html
@@ -1,18 +1,14 @@
-<!--
-  Generated template for the DateviewPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>dateview</ion-title>
+    <ion-title>DateView</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+  <h2 text-center *ngIf="selectedDate">
+    {{selectedDate.month}} {{selectedDate.date}}, {{selectedDate.year}}
+  </h2>
 </ion-content>
