--- a/src/pages/tracker/tracker.html
+++ b/src/pages/tracker/tracker.html
@@ -1,15 +1,9 @@
-<!--
-  Generated template for the TrackerPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
     <ion-title>Baby Tracker</ion-title>
     <ion-buttons end>
-      <button ion-button icon-only color="royal">
+      <button ion-button icon-only color="royal" (click)="createNewDate($event)">
         <ion-icon name="add-circle"></ion-icon>
       </button>
     </ion-buttons>
@@ -20,8 +14,8 @@
 
 <ion-content padding>
   <ion-list>
-    <button ion-item *ngFor="let date of dates" (click)="dateSelected(date)">
-      {{date.month}} {{date.date}}, {{date.year}}
+    <button ion-item *ngFor="let date of dates" (click)="dateSelected($event, date)">
+      {{date}}
     </button>
   </ion-list>
 </ion-content>
