--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Baby Tracker - (Home)</ion-title>
+    <ion-title>Baby Tracker</ion-title>
   </ion-navbar>
 </ion-header>
 
