--- a/src/pages/dateview/dateview.html
+++ b/src/pages/dateview/dateview.html
@@ -9,6 +9,6 @@
 
 <ion-content padding>
   <h2 text-center *ngIf="selectedDate">
-    {{selectedDate.month}} {{selectedDate.date}}, {{selectedDate.year}}
+    {{selectedDate}}
   </h2>
 </ion-content>
