--- a/src/pages/tracker/tracker.html
+++ b/src/pages/tracker/tracker.html
@@ -18,4 +18,7 @@
       {{date}}
     </button>
   </ion-list>
+  <ion-item *ngFor="let item of items | async">
+    {{item | json}}
+  </ion-item>
 </ion-content>
