--- a/src/pages/tracker/tracker.html
+++ b/src/pages/tracker/tracker.html
@@ -3,7 +3,7 @@
   <ion-navbar>
     <ion-title>Baby Tracker</ion-title>
     <ion-buttons end>
-      <button ion-button icon-only color="royal" (click)="createFeedingPage($event)">
+      <button ion-button icon-only color="royal" (click)="createFeedingPage()">
         <ion-icon name="add-circle"></ion-icon>
       </button>
     </ion-buttons>
@@ -19,6 +19,5 @@
    </button>
   </ion-list>
   <ion-list>
-
   </ion-list>
 </ion-content>
