--- a/src/pages/create-date/create-date.html
+++ b/src/pages/create-date/create-date.html
@@ -18,12 +18,12 @@
     
     <ion-item>
       <ion-label floating>Date</ion-label>
-      <ion-datetime displayFormat="MMM DD YYYY" [(ngModel)]="todaysDate"></ion-datetime>
+      <ion-datetime displayFormat="DDDD MMM DD YYYY" [(ngModel)]="createdFeeding.feeding.date"></ion-datetime>
     </ion-item>
 
     <ion-item>
       <ion-label floating>Time</ion-label>
-      <ion-datetime displayFormat="h:mm A" pickerFormat="h mm A" [(ngModel)]="timedFeeding.time"></ion-datetime>
+      <ion-datetime displayFormat="hh:mm A" pickerFormat="hh mm A" [(ngModel)]="timedFeeding.time"></ion-datetime>
     </ion-item>
 
     <ion-item>
